; ModuleID = '/home/carl/AnghaBench/libui/_wip/examples_drawtext/extr_emptystr_hittest.c_changeFont.c'
source_filename = "/home/carl/AnghaBench/libui/_wip/examples_drawtext/extr_emptystr_hittest.c_changeFont.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, double, i64, i64, i64 }

@defaultFont = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@fontFamily = common dso_local global i64 0, align 8
@fontButton = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [64 x i8] c"{\0A\09family: %s\0A\09size: %g\0A\09weight: %d\0A\09italic: %d\0A\09stretch: %d\0A}\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @changeFont to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @changeFont(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 0), align 8
  %6 = load i64, i64* @fontFamily, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 0), align 8
  %10 = call i32 @uiFreeText(i64 %9)
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @fontButton, align 4
  %13 = call i32 @uiFontButtonFont(i32 %12, %struct.TYPE_3__* @defaultFont)
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 0), align 8
  %15 = load double, double* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 1), align 8
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 4), align 8
  %17 = trunc i64 %16 to i32
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 3), align 8
  %19 = trunc i64 %18 to i32
  %20 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @defaultFont, i32 0, i32 2), align 8
  %21 = trunc i64 %20 to i32
  %22 = call i32 @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0), i64 %14, double %15, i32 %17, i32 %19, i32 %21)
  %23 = call i32 (...) @redraw()
  ret void
}

declare dso_local i32 @uiFreeText(i64) #1

declare dso_local i32 @uiFontButtonFont(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @printf(i8*, i64, double, i32, i32, i32) #1

declare dso_local i32 @redraw(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
